# otolith

./: .gitignore  Cargo.toml  README.md  index.html  package.json  spec.md  vite.config.ts
.cursor/rules/: generic.mdc
src/: App.css  App.tsx  MusicPlayer.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
watcher/: Cargo.toml
watcher/src/: backends.rs  lib.rs  universal_path.rs
watcher/src/storage/: local.rs
