[package]
name = "watcher"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["stream"] }
fluent-uri = { version = "0.3.2", features = ["serde", "std"] }
